--- a/sass/blog/_entrymeta.scss
+++ b/sass/blog/_entrymeta.scss
@@ -1,7 +1,10 @@
-.entrymeta {
+.entry-meta,
+.entry-footer {
 	color: $grey;
+	@include font-size(13px);
 	margin-bottom: 1em;
-	p {
-		margin: 0.3125em 0; 
-	}
 }
+.cat-links, .tags-links, .comments-link {
+  margin-right: 1em;
+}
+
