--- a/sass/blog/_blog.scss
+++ b/sass/blog/_blog.scss
@@ -1,3 +1,13 @@
+.post {
+	border-top: 1px solid $light-grey;
+	padding-top: 1em;
+	margin-bottom: 2em;
+	&:first-of-type {
+		border: none;
+		padding-top: 0;
+	}
+}
+
 @import "entrymeta";
 
 @import "post-pagination";
