--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -21,7 +21,7 @@
 	float: left;
 }
 
-.right-block {;
+.right-block {
 	float: left;
 	@media screen and (min-width: $phone-wide-landscape) {
 		float: right;
