--- a/sass/forms/_fields.scss
+++ b/sass/forms/_fields.scss
@@ -28,9 +28,12 @@ textarea {
 	border: 1px solid $color__border-input;
 	@include border-radius(2px);
 	@include box-sizing(content-box);
+	@include font-size(14px);
 	padding: 3px;
+	-webkit-appearance: none;
 	&:focus {
 		color: $color__text-input-focus;
+		@include transition (.07s, ease-in);
 	}
 }
 
