--- a/sass/style.scss
+++ b/sass/style.scss
@@ -46,6 +46,12 @@ $font__pre: "Courier 10 Pitch", Courier, monospace;
 $font__line-height-body: 1.5;
 $font__line-height-pre: 1.6;
 
+$font__size-xlarge: 30px;
+$font__size-large: 22px;
+$font__size-medium: 18px;
+$font__size-default: 16px;
+$font__size-small: 14px;
+
 
 // Media queries
 $desktop-wide:          75.00em;  // 1200px
