--- a/sass/typography/_copy.scss
+++ b/sass/typography/_copy.scss
@@ -21,7 +21,7 @@ address {
 pre {
 	background: $color__background-pre;
 	font-family: $font__pre;
-	@include font-size(15px);
+	font-size: $font__size-small;
 	line-height: $font__line-height-pre;
 	margin-bottom: 1.6em;
 	max-width: 100%;
@@ -30,7 +30,7 @@ pre {
 }
 
 code, kbd, tt, var {
-	@include font-size(15px);
+	font-size: $font__size-small;
 	font-family: $font__code;
 }
 
