--- a/sass/_accessibility.scss
+++ b/sass/_accessibility.scss
@@ -15,7 +15,7 @@
 		clip: auto !important;
 		color: $color__text-screen;
 		display: block;
-		@include font-size(14px);
+		font-size: $font__size-small;
 		font-weight: bold;
 		height: auto;
 		left: 5px;
