--- a/sass/forms/_buttons.scss
+++ b/sass/forms/_buttons.scss
@@ -4,7 +4,7 @@
 	@include border-radius(2px);
 	color: $white;
 	cursor: pointer; /* Improves usability and consistency of cursor style between image-type 'input' and others */
-	@include font-size(14px);
+	font-size: $font__size-small;
 	line-height: 1;
 	padding:  10px 15px;
 	text-transform: uppercase;
