--- a/sass/forms/_fields.scss
+++ b/sass/forms/_fields.scss
@@ -28,7 +28,7 @@ textarea {
 	border: 1px solid $color__border-input;
 	@include border-radius(2px);
 	@include box-sizing(content-box);
-	@include font-size(14px);
+	font-size: $font__size-small;
 	padding: 3px;
 	-webkit-appearance: none;
 	&:focus {
