--- a/sass/sidebar/_sidebar.scss
+++ b/sass/sidebar/_sidebar.scss
@@ -6,8 +6,6 @@
 
 .sidebar-title {
 	border-bottom: 1px solid $light-grey;
-	margin: 0 0 1em; 
-	padding: 0 0 0.5em; 
 	text-transform: uppercase;	
 }
 
@@ -18,7 +16,7 @@
 		margin-left: 0.5em;
 		li {
 			padding: 0.5em 0;
-			@include font-size(14px);
+			font-size: $font__size-small;
 		}
 	}
 	a {
