--- a/sass/typography/_typography.scss
+++ b/sass/typography/_typography.scss
@@ -5,16 +5,13 @@ select,
 textarea {
 	color: $color__text-main;
 	font-family: $font__sans;
-	@include font-size(16px);
+	font-size: $font__size-default;
 	line-height: $font__line-height-body;
 }
 
-p, ul, ol, table, td, th, dl, dd, dt {
-	@include font-size(16px);
-}
 
 .small-text {
-	@include font-size(13px);
+	font-size: $font__size-small;
 }
 
 @import "copy";
