Moving the p margin-bottom to typography.scss. I'm constantly searching for it.

--- a/sass/typography/_typography.scss
+++ b/sass/typography/_typography.scss
@@ -9,6 +9,9 @@ textarea {
 	line-height: $font__line-height-body;
 }
 
+p {
+	margin-bottom: 1em;
+}
 
 .small-text {
 	font-size: $font__size-small;
