--- a/sass/header/_branding.scss
+++ b/sass/header/_branding.scss
@@ -1,15 +1,19 @@
-.site-branding {
+.site-title a {
 	
-	.site-title a {
-		background: url("../images/logo.png") no-repeat;
-		@include image-2x("../images/logo@2x.png", 200px, 50px);
-		display: block;
-		height: 50px;
-		text-indent: -9999px;
-		width: 200px;
-	}
-	
-	.site-description {
-		display: none;
+	background: url("../images/logo.png") no-repeat;
+	@include image-2x("../images/logo@2x.png", 200px, 50px);
+	display: block;
+	height: 50px;
+	margin: 10px auto;
+	text-indent: -9999px;
+	width: 200px;
+	@media screen and (min-width: $tablet-portrait) {
+		margin:0;
+		padding: 0;
 	}
 }
+
+.site-description {
+	display: none;
+}
+
