--- a/sass/forms/_fields.scss
+++ b/sass/forms/_fields.scss
@@ -29,7 +29,8 @@ textarea {
 	@include border-radius(2px);
 	@include box-sizing(content-box);
 	font-size: $font__size-small;
-	padding: 3px;
+	line-height: 1;
+	padding: 10px 5px;
 	-webkit-appearance: none;
 	&:focus {
 		color: $color__text-input-focus;
