--- a/sass/forms/_searchform.scss
+++ b/sass/forms/_searchform.scss
@@ -1,31 +1,16 @@
 /* Search Form
 -------------------------------------------*/
 .search-form {
-	position: relative;
-	max-width: 400px;
-	
+	@include flexbox;
 	input {
 		border: none;
-		border-radius: 0px !important;
-		height: 38px;
-		vertical-align: top;
-	}
-	
-	.search-field {
-		background: $offwhite;
-		line-height: 1;
-		padding: 0 5px;
-		width: 100%;
-	}
-
-	.search-submit {
-		position: absolute;
-		z-index: 10;
-		right: -10px;
-		top: 0;
-		letter-spacing: 1px;
-		padding: 0 10px;
-		text-transform: uppercase;
-		-webkit-appearance: none;
-	}
+		@include border-radius(0);
+		&.search-field {
+			background: $offwhite;
+			width: calc(100% - 10px);
+		}
+	}	
+	label {
+		@include flex(1);
+	}		
 }
