Updated the form fields. Switching from content box to border box.

--- a/sass/forms/_searchform.scss
+++ b/sass/forms/_searchform.scss
@@ -7,7 +7,7 @@
 		@include border-radius(0);
 		&.search-field {
 			background: $offwhite;
-			width: calc(100% - 10px);
+			width: 100%;
 		}
 	}	
 	label {
