--- a/css/style.css
+++ b/css/style.css
@@ -942,8 +942,10 @@ input[type="submit"]:hover {
 
 input[type="checkbox"],
 input[type="radio"] {
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
   padding: 0;
-  /* Addresses excess padding in IE8/9 */
 }
 
 input[type="search"] {
@@ -975,9 +977,9 @@ textarea {
   border-radius: 2px;
   background-clip: padding-box;
   /* stops bg color from leaking outside the border: */
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   font-size: 14px;
   line-height: 1;
   padding: 10px 5px;
@@ -1023,7 +1025,7 @@ textarea {
 }
 .search-form input.search-field {
   background: #f0f1f1;
-  width: calc(100% - 10px);
+  width: 100%;
 }
 .search-form label {
   -webkit-box-flex: 1;
