--- a/sass/forms/_fields.scss
+++ b/sass/forms/_fields.scss
@@ -1,6 +1,8 @@
 input[type="checkbox"],
 input[type="radio"] {
-	padding: 0; /* Addresses excess padding in IE8/9 */
+	@include box-sizing(content-box);
+	padding: 0; 
+	
 }
 
 input[type="search"] {
@@ -27,7 +29,7 @@ textarea {
 	color: $color__text-input;
 	border: 1px solid $color__border-input;
 	@include border-radius(2px);
-	@include box-sizing(content-box);
+	@include box-sizing(border-box);
 	font-size: $font__size-small;
 	line-height: 1;
 	padding: 10px 5px;
